fixing white space + navbar

--- a/styles/components/Layout.module.scss
+++ b/styles/components/Layout.module.scss
@@ -11,7 +11,7 @@
   padding-bottom: 80px;
 
   @include mixins.mediaQuery(tablet) {
-    min-height: 95vh;
+    min-height: 90vh;
   }
 }
 
@@ -47,7 +47,7 @@
   padding: 1em 0.5em;
 
   @include mixins.mediaQuery(tablet) {
-    padding: 4em 2em 0 2em;
+    padding: 3.5em 2em 0 2em;
     width: 75%;
   }
 }
