--- a/styles/components/Navbar.module.scss
+++ b/styles/components/Navbar.module.scss
@@ -28,7 +28,15 @@
 
 .logo {
   font-family: var.$kolker;
-  font-size: 4em;
+  font-size: 3.25em;
+
+  @include mixins.mediaQuery(tablet) {
+    font-size: 4em;
+  }
+
+  @include mixins.mediaQuery(laptop) {
+    font-size: 4.75em;
+  }
 }
 
 .nav-dropdown {
@@ -43,7 +51,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 0.5em;
 
   color: var.$primary-font;
   letter-spacing: 1px;
@@ -77,6 +84,7 @@
   opacity: 1;
   transition: visibility 0.15s ease, opacity 0.1s ease, max-height 0.15s ease;
   max-height: 550px;
+  padding-bottom: 0.5em;
 }
 
 .inner-nav-projects {
