--- a/styles/components/Socialmedia.module.scss
+++ b/styles/components/Socialmedia.module.scss
@@ -1,7 +1,7 @@
 @use "../variables" as var;
 
 .social-media a {
-  margin: 0 0.15em;
+  margin: 0 0.2em;
 }
 
 .social-media a:hover {
